--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 @import url(./public/css/utilities.css);
 
+:root{
+    --light-background:rgba(255,255,255,.8); 
+    --dark-background: rgba(0,0,0,.2);
+    --linear-gradient-bg-dark: linear-gradient(180deg, rgba(22, 21, 21,.9),rgba(22, 21, 21,.1));
+    --linear-gradient-bg-light: linear-gradient(180deg, rgba(22, 21, 21,.1),rgba(22, 21, 21,.1));
+}
+
 /* ------------------hero banner stylng------------ */
 
 .hero-banner{
     background:var(--navbar-bg-color);
     color: var(--white);
     font-family: var(--poppins);
-    /* height: calc(80vh - 60px); */
 }
 
 .hero-banner-inner-container{
@@ -14,7 +20,6 @@
 }
 
 .banner-left-section{
-    /* flex-basis: 100%; */
     width: 50%;
     justify-content: space-around;
     align-items:flex-start;
@@ -90,24 +95,25 @@
 }
 
 .card-women{
-    background-image: linear-gradient(180deg, rgba(22, 21, 21,.9),rgba(22, 21, 21,.1)), url(./public/images/women.jpg);
+    background-image: var(--linear-gradient-bg-dark), url(./public/images/women.jpg);
 }
 .card-women > h2{
-    text-align: right;
     margin-right: 1rem;
+    justify-self: end;
 }
 .card-new-arrival{
-    background-image: linear-gradient(180deg, rgba(22, 21, 21,.9),rgba(22, 21, 21,.1)), url(./public/images/new_arrival.jpg);
+    background-image: var(--linear-gradient-bg-dark), url(./public/images/new_arrival.jpg);
 }
 .card-new-arrival > h2{
-    text-align: center;
+    /* text-align: center; */
+    justify-self: center;
 }
 .card-men{
-    background-image: linear-gradient(180deg, rgba(22, 21, 21,.9),rgba(22, 21, 21,.1)), url(./public/images/men.jpg);
+    background-image: var(--linear-gradient-bg-dark), url(./public/images/men.jpg);
 }
 .card-men > h2{
-    text-align: left;
     margin-left: 1rem;
+    justify-self: start;
 }
 /* -------------------Category section------------------*/
 .category-container{
@@ -124,10 +130,11 @@
 }
 
 .card{
-  
     display: flex;
     flex-direction: row;
     align-items: flex-end;
+    background-position: center;
+    border-bottom: 1px solid var(--dark-background);
 }
 .card:hover{
     opacity: .8;
@@ -137,33 +144,33 @@
     font-size: 1.2rem;
     text-transform: uppercase;
     font-weight: 600;
-    background:rgba(255,255,255,.8);
+    background:var(--light-background);
     padding: .5rem 0;
 
    
 }
 .card-shirt{
-    background-image: linear-gradient(180deg, rgba(22, 21, 21,.1),rgba(22, 21, 21,.1)), url(./public/images/shirt.jpg);
+    background-image: var(--linear-gradient-bg-light),url(./public/images/shirt.jpg);
 }
 
 .card-tshirt{
-    background-image: linear-gradient(180deg, rgba(22, 21, 21,.1),rgba(22, 21, 21,.1)), url(./public/images/t-shirt.jpg);
+    background-image: var(--linear-gradient-bg-light), url(./public/images/t-shirt.jpg);
 }
 
 .card-jean{
-    background-image: linear-gradient(180deg, rgba(22, 21, 21,.1),rgba(22, 21, 21,.1)), url(./public/images/jeans.jpg);
+    background-image: var(--linear-gradient-bg-light), url(./public/images/jeans.jpg);
 }
 
 .card-wallet{
-    background-image: linear-gradient(180deg, rgba(22, 21, 21,.1),rgba(22, 21, 21,.1)), url(./public/images/wallet.jpg);
+    background-image: var(--linear-gradient-bg-light), url(./public/images/wallet.jpg);
 }
 
 .card-shoe{
-    background-image: linear-gradient(180deg, rgba(22, 21, 21,.1),rgba(22, 21, 21,.1)), url(./public/images/shoes.jpg);
+    background-image: var(--linear-gradient-bg-light), url(./public/images/shoes.jpg);
 }
 /* -------------------Offer card styling------------------ */
 .offer-section{
-    margin-top: 3rem;
+    margin: 3rem 0;
     text-align: center;
     background-image: url(./public/images/backround\ for\ banner\ secttions\ and\ sop\ page.jpg);
     background-size: cover;
@@ -175,16 +182,19 @@
 .offer-card-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px,1fr));
-    grid-template-rows: 200px;
+    grid-auto-rows: 200px;
     gap: 2rem;
     margin-top: 1rem;
 }
 .offer-card{
-    background:rgba(255,255,255,.8); 
+    background:var(--light-background); 
     justify-content: center;
 }
-.section-heading{
-    font-family: var(--aguafina);
+
+.coupon-code{
+    background-color: var(--dark-background);
+    margin-top: 1rem;
+    padding: .5rem;
 }
 
 
@@ -194,6 +204,65 @@
 
 
 
+/* ----------------Footer Styling----------- */
+.footer-section{
+    background-color: var(--navbar-bg-color);
+    color: var(--white);
+    padding: 2rem 0;
+}
+.footer-section  a{
+    color: inherit;
+}
+.footer-section  a:hover{
+    opacity: .5;
+}
+
+.footer-container{
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+.footer-container .brand{
+    font-size: 1.5rem;
+}
+
+.footer-heading{
+    color: var(--secondary-color-medium);
+    font-size: .75rem;
+    margin-bottom: .5rem;
+}
+.footer-container ul{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    gap: .5rem;
+}
+.footer-container .scroll-to-top{
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.scroll-to-top p{
+    color: var(--secondary-color-medium);
+}
+
+@media screen and (max-width:520px){
+    .banner-left-section .heading-3{
+        font-size: 3rem;
+    }
+    .banner-left-section .heading-1{
+        font-size: 4rem;
+    }
+}
+
+
+::-webkit-scrollbar-track{
+    background: var(--navbar-bg-color);
+}
+::-webkit-scrollbar-thumb{
+    background: var(--white);
+}
 
 /* -------------------Media queries------------------ */
 
@@ -229,14 +298,5 @@
     }
     .nav-items{
         display: none;
-    }
-}
-
-@media screen and (max-width:520px){
-    .banner-left-section .heading-3{
-        font-size: 3rem;
-    }
-    .banner-left-section .heading-1{
-        font-size: 4rem;
     }
 }
