--- a/style.css
+++ b/style.css
@@ -134,7 +134,6 @@
     flex-direction: row;
     align-items: flex-end;
     background-position: center;
-    border-bottom: 1px solid var(--dark-background);
 }
 .card:hover{
     opacity: .8;
@@ -144,7 +143,8 @@
     font-size: 1.2rem;
     text-transform: uppercase;
     font-weight: 600;
-    background:var(--light-background);
+    background:var(--navbar-bg-color);
+    color: var(--white);
     padding: .5rem 0;
 
    
@@ -231,6 +231,7 @@
     color: var(--secondary-color-medium);
     font-size: .75rem;
     margin-bottom: .5rem;
+    text-transform: uppercase;
 }
 .footer-container ul{
     display: flex;
