--- a/public/pages/cart/cart.css
+++ b/public/pages/cart/cart.css
@@ -67,18 +67,32 @@
     color: var(--gray-600);
 }
 
-.product-card-hor .card-btns{
-    align-self: stretch;
-    gap: .5rem;
-}
+
 .product-card-hor .btn,
 .btn-place-order{
     align-self: center;
-    width: 90%;
+    width: 90%; 
     font-size: .75rem;
     padding: .25rem .5rem;
     border-radius: 0;
     border: 1px solid var(--navbar-bg-color);
+}
+
+.product-card-hor .card-btns{
+    align-self: stretch;
+    gap: .5rem;
+}
+
+
+
+.product-card-hor .btn{
+    align-self: flex-end;
+    width: 100%;
+    font-size: .75rem;
+    padding: .25rem .5rem;
+    border-radius: 0;
+    border: 1px solid var(--navbar-bg-color);
+    width: 100%;
 }
 .product-card-hor .btn:hover{
     opacity: .8;
