--- a/public/pages/product/product.css
+++ b/public/pages/product/product.css
@@ -12,7 +12,6 @@
     justify-content: flex-start;
     gap: 1.5rem;
     border-right: 1px solid var(--navbar-bg-color);
-    overflow-y: auto;
 }
 
 .filter-sidebar input
@@ -159,4 +158,43 @@
 }
 .card-btns .btn-add-to-cart:active{
     width: 100%;
+}
+
+.pagination {
+    display: inline-block;
+    margin: 2rem 0;
+  }
+  
+  .pagination a {
+    color: var(--navbar-bg-color);
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  .pagination a:hover{
+      background-color: var(--gray-200);
+  }
+  .pagination a.active{
+      background-color: var(--navbar-bg-color);
+      color: var(--white);
+  }
+
+
+@media screen and (max-width:600px){
+    .product-container{
+        grid-template-columns: 1fr;
+    }
+    .filter-sidebar {
+        display: none;
+    }
+    .product-page{
+        justify-content: center;
+    }
+    .product-card-grid{
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+    .product-card{
+        width: 15rem;
+        box-shadow: var(--shadow);
+    }
 }
