--- a/style.css
+++ b/style.css
@@ -22,14 +22,14 @@
 
 /* -----------vertical navigation for mobile---------- */
 .vertical-nav{
-    width: 300px;
+    width: 18rem;
     min-height: 100%;
     background-color: var(--white);
     color: var(--navbar-bg-color);
-    font-size: 2rem;
+    font-size: 1.4rem;
     position: fixed;
     top: 0;
-    right: -300px;
+    right: -18rem;
     bottom: 0;
     z-index: 3;
     transition: all .5s ease-in-out;
@@ -38,7 +38,7 @@
     padding: 2rem 3rem;
     justify-content: flex-start;
     align-items: flex-end;
-    gap: 5rem;
+    gap: 2rem;
 }
 
 .vertical-nav a{
@@ -48,6 +48,10 @@
 
 .vertical-nav a:hover{
     border-bottom-color: var(--primary-color);
+}
+
+.vertical-nav .close-vertical-btn{
+    align-self: flex-start;
 }
 
 .vertical-nav .nav-search-container{
@@ -71,9 +75,6 @@
 
 .card-input-signup{
     position: absolute;
-
-    background-color: aqua;
-    border: 1px salmon;
 }
 
 
@@ -146,7 +147,7 @@
 /* ------------------gender card stylng------------ */
 .gender-cards-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(13rem, 1fr));
 }
 
 .gender-card{
@@ -193,8 +194,8 @@
 .category-card-container{
     margin:1rem auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    grid-auto-rows: 150px;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    grid-auto-rows: 10rem;
     gap: 1rem;
 
 }
@@ -240,7 +241,7 @@
 }
 /* -------------------Offer card styling------------------ */
 .offer-section{
-    margin: 3rem 0;
+    margin: 3rem auto;
     text-align: center;
     background-image: url(./public/images/backround\ for\ banner\ secttions\ and\ sop\ page.jpg);
     background-size: cover;
@@ -251,7 +252,7 @@
 
 .offer-card-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(13rem,1fr));
     grid-auto-rows: 200px;
     gap: 2rem;
     margin-top: 1rem;
@@ -259,6 +260,7 @@
 .offer-card{
     background:var(--light-background); 
     justify-content: center;
+    padding: 0 1rem;
 }
 
 .coupon-code{
@@ -318,14 +320,6 @@
     color: var(--secondary-color-medium);
 }
 
-@media screen and (max-width:520px){
-    .banner-left-section .heading-3{
-        font-size: 3rem;
-    }
-    .banner-left-section .heading-1{
-        font-size: 4rem;
-    }
-}
 
 
 ::-webkit-scrollbar-track{
@@ -346,7 +340,17 @@
     }
 }
 
-@media screen and (max-width:650px){
+@media screen and (max-width:800px){
+    .nav-search-main{
+        width: 40%;
+    }
+    .nav-items{
+        flex-basis: 50%;
+    }
+   
+}
+
+@media screen and (max-width:600px){
     .html{
         font-size: 10px;
     }
@@ -375,5 +379,21 @@
     }
     .nav-search-main{
         display: none;
+    }
+    .gender-cards-container{
+        grid-template-columns: 1fr;
+    }
+    .category-container{
+        grid-template-columns: 1fr;
+    }
+}
+
+
+@media screen and (max-width:520px){
+    .banner-left-section .heading-3{
+        font-size: 3rem;
+    }
+    .banner-left-section .heading-1{
+        font-size: 4rem;
     }
 }
